--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>attendance</groupId>
-  <artifactId>attendance</artifactId>
+  <groupId>kaoqin</groupId>
+  <artifactId>kaoqin</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>attendance Maven Webapp</name>
+  <name>kaoqin Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.6</version>
+	</dependency>
+            
+    <dependency>
+		<groupId>org.mockito</groupId>
+		<artifactId>mockito-all</artifactId>
+		<version>1.9.0</version>
+	</dependency>
+            
    <dependency>
 	 <groupId>org.mybatis</groupId>
 	 <artifactId>mybatis</artifactId>
@@ -48,7 +53,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<artifactId>spring-webmvc</artifactId>
 		<version>3.1.0.RELEASE</version>
 	</dependency>
-	
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-test</artifactId>
+		<version>3.1.0.RELEASE</version>
+	</dependency>
+            
 	 <dependency>
 		<groupId>org.apache.geronimo.specs</groupId>
 		<artifactId>geronimo-servlet_3.0_spec</artifactId>
@@ -106,19 +116,68 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<artifactId>mybatis-spring</artifactId>
 		<version>1.1.0</version>
 	</dependency>
+	
+	<!-- 
+	<dependency>  
+	    <groupId>org.quartz-scheduler</groupId>  
+	    <artifactId>quartz</artifactId>  
+	    <version>2.2.1</version>  
+	</dependency>  
+	<dependency>  
+	    <groupId>org.quartz-scheduler</groupId>  
+	    <artifactId>quartz-jobs</artifactId>  
+	    <version>2.2.1</version>  
+	</dependency>  
+       -->      
   <dependency>
 	<groupId>quartz</groupId>
 	<artifactId>quartz</artifactId>
 	<version>1.5.2</version>
-</dependency>
-            
+	</dependency>
+	
 	<dependency>
 		<groupId>jstl</groupId>
 		<artifactId>jstl</artifactId>
 		<version>1.2</version>
 	</dependency>	  
+	
+	<dependency>
+		<groupId>commons-lang</groupId>
+		<artifactId>commons-lang</artifactId>
+		<version>20030203.000129</version>
+	</dependency>
+	<dependency>
+		<groupId>dom4j</groupId>
+		<artifactId>dom4j</artifactId>
+		<version>1.6.1</version>
+	</dependency>
+            
+	  <dependency>
+		<groupId>commons-httpclient</groupId>
+		<artifactId>commons-httpclient</artifactId>
+		<version>3.1</version>
+	</dependency>
+            
+     <dependency>
+		<groupId>sso</groupId>
+		<artifactId>sso</artifactId>
+		<version>1.0.0</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>javax.mail</groupId>
+		<artifactId>mail</artifactId>
+		<version>1.4.7</version>
+	</dependency>
+	
+	 <dependency>
+		<groupId>org.freemarker</groupId>
+		<artifactId>freemarker</artifactId>
+		<version>2.3.19</version>
+	</dependency>
+                   
   </dependencies>
   <build>
-    <finalName>attendance</finalName>
+    <finalName>kaoqin</finalName>
   </build>
 </project>
