--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     <dependency>
 		<groupId>org.mockito</groupId>
 		<artifactId>mockito-all</artifactId>
-		<version>1.9.0</version>
+		<version>1.9.5</version>
 	</dependency>
             
    <dependency>
@@ -157,23 +157,30 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<artifactId>commons-httpclient</artifactId>
 		<version>3.1</version>
 	</dependency>
-            
+     <!-- 
      <dependency>
 		<groupId>sso</groupId>
 		<artifactId>sso</artifactId>
 		<version>1.0.0</version>
 	</dependency>
-	
+      -->
+	<!-- 
 	<dependency>
 		<groupId>javax.mail</groupId>
 		<artifactId>mail</artifactId>
 		<version>1.4.7</version>
 	</dependency>
+	 -->
+	<dependency>
+		<groupId>javax.mail</groupId>
+		<artifactId>mail</artifactId>
+		<version>1.5.0-b01</version>
+	</dependency>
 	
 	 <dependency>
 		<groupId>org.freemarker</groupId>
 		<artifactId>freemarker</artifactId>
-		<version>2.3.19</version>
+		<version>2.3.20</version>
 	</dependency>
                    
   </dependencies>
